fixes spacing issue on mobile between two input blocs spacing was too wide between origin/destination bloc and gas price/mpg bloc

--- a/src/InputTemplate.css
+++ b/src/InputTemplate.css
@@ -1,5 +1,6 @@
 .input-group {
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 0!important;
 }
 
 @media (min-width: 768px) {
